# react-go

./: .dockerignore  .gitignore  CONVERSION_README.md  Dockerfile  LICENSE  REACT_CONVERSION_GUIDE.md  pyproject.toml  reformat_html.py  requirements.txt  run_tests.sh  todo.txt  zip 2.txt
backend/: settings.py  urls.py
discogs/: admin.py  apps.py  models.py  serializers.py  test_urls.py  tests.py  urls.py  views.py
discogs/management/commands/: convert_prices.py  export_csv.py  export_listings.py
discogs/migrations/: 0001_initial.py  0002_recommendationmodel_rename_kept_listing_is_keeper_and_more.py  0003_rename_is_keeper_listing_kept_and_more.py  0004_alter_recommendationmetrics_options_and_more.py  0005_alter_recommendationmetrics_options_and_more.py  0006_recommendationmodel_model_version_and_more.py  0007_recordoftheday.py  0008_recordoftheday_average_desirability_and_more.py  0009_recordoftheday_average_desirability_and_more.py
discogs/scraper/: get_inventory.py
discogs/utils/: improved_recommendation.py  rate_limits.py  recommendation.py  scoring.py  sorted_listings.py  thermodynamic_recommendation.py
frontend/: .eslintrc.js  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
go-backend/: IMPLEMENTATION_SUMMARY 2.md  README.md  SCRAPER_README 2.md  go.mod  go.sum  integration_test.go  main.go  user_inventories.json
python-services/: README.md  recommendation-service 2.py  recommendation-service.py  scraper-service.py
theme/static_src/: tailwind.config.js
theme/templates/: base.html
(+28 files in other folders)
